--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pages/index.css">
-  <title>Путешествия по России
-  </title>
+  <title>Путешествия по России</title>
 </head>
 <body>
   <div class="page">
@@ -14,7 +13,13 @@
       <p class="header__lang-link">Ru</p>
       <p class="header__lang-link">En</p>
     </div>
-   
+    <div class="content margin">
+      <section class="lead margin">
+        <h1 class="lead__title">Путешествия по России</h1>
+        <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+        <img src="images/__image.jpg" class="lead__image" alt="спальное место в поезде у окна">
+      </section>
+    </div>
   </div>
 </body>
 </html>
