--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="page">
-    <div class="header">
+    <div class="header header_position_margin">
       <div class="header__logo" ></div>
       <p class="header__lang-link">Ru</p>
       <p class="header__lang-link">En</p>
@@ -18,6 +18,7 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
         <img src="images/__image.jpg" class="lead__image" alt="спальное место в поезде у окна">
+        <p class="lead__caption">ваша полка - верхняя</p>
       </section>
     </div>
   </div>
