--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
           Аэропортов 241
         </p>
       </section>
+      <section class="photo-grid">
+        <img src="images/__item.png" alt="Поезд" class="photo-grid__item">
+        <img src="images/__item (1).png" alt="Над горами" class="photo-grid__item">
+        <img src="images/__item (2).png" alt="Утрении туман" class="photo-grid__item">
+        <img src="images/__item (3).png" alt="Лес в сочи" class="photo-grid__item">
+        <img src="images/__item (4).png" alt="Лед байкала" class="photo-grid__item">
+        <img src="images/__item (5).png" alt="Байкал" class="photo-grid__item">
+        <img src="images/__item (6).png" alt="Ельбрус" class="photo-grid__item">
+        <img src="images/__item (7).png" alt="Переход" class="photo-grid__item">
+        <img src="images/__item (8).png" alt="Мутновский вулкан" class="photo-grid__item">
+        <img src="images/__item (9).png" alt="Горы Камчатки" class="photo-grid__item">
+        <img src="images/__item (10).png" alt="Баикальскии берег" class="photo-grid__item">
+        <img src="images/__item (11).png" alt="Ергаки" class="photo-grid__item">
+      </section>
     </div>
   </div>
 </body>
