--- a/index.html
+++ b/index.html
@@ -125,14 +125,17 @@
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala
         " class="cover__overlay">
+       
+        <div class="cover__conteiner">
           <h3 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h3>
           <h4 class="cover__subtitle">По мотивам учебной темы о Транссибе
              — путешествие от столицы до Байкала 
              на электричках.</h4>
-        </a>
+        </div>
+      </a>
       </section>
     </div>
-    <div class="footer" >
+    <div class="footer footer_margin_top" >
       <ul class="footer__conteiner-nav">
         <li class="footer__link">Карты</li>
         <li class="footer__link">Погода</li>
@@ -140,7 +143,7 @@
         <li class="footer__link">Календарь</li>
         <li class="footer__link">Путешествия</li>
       </ul>
-    <p class="footer__copyright">© 2020. Впишите своё имя</p>
+    <p class="footer__copyright">© 2022. Izorgin Pasha</p>
     </div>
   </div>
 </body>
