--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <img src="images/__image.png" alt="" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link">park-kosa.ru
+            <a href="http://park-kosa.ru" class="place__link">park-kosa.ru
             </a>
           </div>
           <div class="place__conteiner">
@@ -65,7 +65,7 @@
           <img src="images/__image (1).png" alt="" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link">National Geographic
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic
             </a>
           </div>
           <div class="place__conteiner">
@@ -81,7 +81,7 @@
           <img src="images/__image (2).png" alt="" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link">Facebook
+            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook
             </a>
           </div>
           <div class="place__conteiner">
@@ -96,7 +96,7 @@
           <img src="images/__image (3).png" alt="" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link">https://vk.com/baikalmile
+            <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile
             </a>
           </div>
           <div class="place__conteiner">
@@ -112,7 +112,7 @@
           <img src="images/__image (4).png" alt="" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="#" class="place__link">http://vodlozero.ru/</a>
+            <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
           </div>
           <div class="place__conteiner">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
@@ -137,11 +137,11 @@
     </div>
     <div class="footer footer_margin_top" >
       <ul class="footer__conteiner-nav">
-        <li class="footer__link">Карты</li>
-        <li class="footer__link">Погода</li>
-        <li class="footer__link">Расписание</li>
-        <li class="footer__link">Календарь</li>
-        <li class="footer__link">Путешествия</li>
+        <li class="footer__li"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+        <li class="footer__li"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+        <li class="footer__li"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+        <li class="footer__li"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+        <li class="footer__li"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
       </ul>
     <p class="footer__copyright">© 2022. Izorgin Pasha</p>
     </div>
