--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>Путешествия по России</title>
 </head>
 <body class="page">
-  <div class="page__conteiner">
+  <div class="page__conteiner ">
     <div class="header header_position_margin">
       <div class="header__logo" ></div>
       <p class="header__lang-link">Ru</p>
       <p class="header__lang-link">En</p>
     </div>
-    <div class="content margin">
+    <div class="content ">
       <section class="lead margin">
         <h1 class="lead__title">Путешествия по России</h1>
         <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
@@ -21,9 +21,9 @@
         <p class="lead__caption">ваша полка - верхняя</p>
       </section>
       <section class="intro position">
-        <h2 class="intro__title margin">Чего мы там не видели?</h2>
+        <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text ">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-        <p class="intro__list margin">Часовых поясов 11<br>
+        <p class="intro__list">Часовых поясов 11<br>
           Объектов природного наследия ЮНЕСКО 12<br>
           Объектов культурного наследия ЮНЕСКО 16<br>
           Природных заповедников 105<br>
@@ -122,7 +122,7 @@
         </div>
         </div>
       </section>
-      <section class="cover">
+      <section class="cover cover_position_left">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala
         " class="cover__overlay">
        
