--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
       </section>
       <section class="photo-grid">
         <img src="images/__item.png" alt="Поезд" class="photo-grid__item">
-        <img src="images/__item (1).png" alt="Над горами" class="photo-grid__item">
-        <img src="images/__item (2).png" alt="Утрении туман" class="photo-grid__item">
-        <img src="images/__item (3).png" alt="Лес в сочи" class="photo-grid__item">
-        <img src="images/__item (4).png" alt="Лед байкала" class="photo-grid__item">
-        <img src="images/__item (5).png" alt="Байкал" class="photo-grid__item">
-        <img src="images/__item (6).png" alt="Ельбрус" class="photo-grid__item">
-        <img src="images/__item (7).png" alt="Переход" class="photo-grid__item">
-        <img src="images/__item (8).png" alt="Мутновский вулкан" class="photo-grid__item">
-        <img src="images/__item (9).png" alt="Горы Камчатки" class="photo-grid__item">
-        <img src="images/__item (10).png" alt="Баикальскии берег" class="photo-grid__item">
-        <img src="images/__item (11).png" alt="Ергаки" class="photo-grid__item">
+        <img src="images/__item1.png" alt="Над горами" class="photo-grid__item">
+        <img src="images/__item2.png" alt="Утрении туман" class="photo-grid__item">
+        <img src="images/__item3.png" alt="Лес в сочи" class="photo-grid__item">
+        <img src="images/item4.png" alt="Лед байкала" class="photo-grid__item">
+        <img src="images/__item5.png" alt="Байкал" class="photo-grid__item">
+        <img src="images/__item6.png" alt="Ельбрус" class="photo-grid__item">
+        <img src="images/__item7.png" alt="Переход" class="photo-grid__item">
+        <img src="images/__item8.png" alt="Мутновский вулкан" class="photo-grid__item">
+        <img src="images/__item9.png" alt="Горы Камчатки" class="photo-grid__item">
+        <img src="images/__item10.png" alt="Баикальскии берег" class="photo-grid__item">
+        <img src="images/__item11.png" alt="Ергаки" class="photo-grid__item">
       </section>
       <section class="places ">
         <div class="place">
           <h3 class="place__title">Куршская коса</h3>
-          <img src="images/__image.png" alt="" class="place__image">
+          <img src="images/__image.png" alt="Куршская коса" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a href="http://park-kosa.ru" class="place__link">park-kosa.ru
@@ -64,7 +64,7 @@
         </div>
         <div class="place">
           <h3 class="place__title">Кольский</h3>
-          <img src="images/__image (1).png" alt="" class="place__image">
+          <img src="images/__image1.png" alt="Кольский" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic
@@ -80,7 +80,7 @@
         </div>
         <div class="place">
           <h3 class="place__title">Алтай</h3>
-          <img src="images/__image (2).png" alt="" class="place__image">
+          <img src="images/1.png" alt="Алтай" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook
@@ -95,7 +95,7 @@
         </div>
         <div class="place">
           <h3 class="place__title">Зимний Байкал</h3>
-          <img src="images/__image (3).png" alt="" class="place__image">
+          <img src="images/2.png" alt="Зимний Байкал" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile
@@ -111,7 +111,7 @@
           </div>
         <div class="place">
           <h3 class="place__title">Карелия</h3>
-          <img src="images/__image (4).png" alt="" class="place__image">
+          <img src="images/__image4.png" alt="Карелия" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
             <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
