--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <div class="page__conteiner ">
     <div class="header">
       <div class="header__logo" ></div>
-      <nav class="header__nav">
-      <p class="header__lang-link">Ru</p>
-      <p class="header__lang-link">En</p>
-      </nav>
+      <ul class="header__nav">
+      <li class="header__list"><a class="header__lang-link header__lang-link_clikc" href="#">Ru</a></li>
+      <li class="header__list"><a class="header__lang-link" href="#">En</a></ul>
+      </ul>
     </div>
-  <div class="content ">
+  <main class="content ">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
@@ -25,25 +25,29 @@
       <section class="intro ">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text ">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-        <p class="intro__list">Часовых поясов 11</p>
-        <p class="intro__list"> Объектов природного наследия ЮНЕСКО 12</p>
-        <p class="intro__list"> Объектов культурного наследия ЮНЕСКО 16</p>
-        <p class="intro__list"> Природных заповедников 105</p>
-        <p class="intro__list"> Аэропортов 241</p>
+        <ul class="intro__conteiner"></ul>
+        <li class="intro__item"><p class="intro__list">Часовых поясов <span class="number">11</span></p></li>
+        <li class="intro__item"><p class="intro__list"> Объектов природного наследия ЮНЕСКО <span class="number">12</span></p></li>
+        <li class="intro__item"><p class="intro__list"> Объектов культурного наследия ЮНЕСКО <span class="number">16</span></p></li>
+        <li class="intro__item"><p class="intro__list"> Природных заповедников <span class="number">105</span></p></li>
+        <li class="intro__item"><p class="intro__list"> Аэропортов <span class="number">241</span></p></li>
+      </ul>
       </section>
-      <section class="photo-grid">
-        <img src="images/__item.png" alt="Поезд" class="photo-grid__item">
-        <img src="images/__item1.png" alt="Над горами" class="photo-grid__item">
-        <img src="images/__item2.png" alt="Утрении туман" class="photo-grid__item">
-        <img src="images/__item3.png" alt="Лес в сочи" class="photo-grid__item">
-        <img src="images/item4.png" alt="Лед байкала" class="photo-grid__item">
-        <img src="images/__item5.png" alt="Байкал" class="photo-grid__item">
-        <img src="images/__item6.png" alt="Ельбрус" class="photo-grid__item">
-        <img src="images/__item7.png" alt="Переход" class="photo-grid__item">
-        <img src="images/__item8.png" alt="Мутновский вулкан" class="photo-grid__item">
-        <img src="images/__item9.png" alt="Горы Камчатки" class="photo-grid__item">
-        <img src="images/__item10.png" alt="Баикальскии берег" class="photo-grid__item">
-        <img src="images/__item11.png" alt="Ергаки" class="photo-grid__item">
+      <section class="photo">
+        <ul class="photo-grid">
+        <li class="photo__list"><img src="images/__item.png" alt="Поезд" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item1.png" alt="Над горами" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item2.png" alt="Утрении туман" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item3.png" alt="Лес в сочи" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/item4.png" alt="Лед байкала" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item5.png" alt="Байкал" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item6.png" alt="Ельбрус" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item7.png" alt="Переход" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item8.png" alt="Мутновский вулкан" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item9.png" alt="Горы Камчатки" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item10.png" alt="Баикальскии берег" class="photo-grid__item"></li>
+        <li class="photo__list"><img src="images/__item11.png" alt="Ергаки" class="photo-grid__item"></li>
+      </ul>
       </section>
       <section class="places ">
         <div class="place">
@@ -123,28 +127,28 @@
         </div>
         </div>
       </section>
-      <section class="cover ">
+      <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala
         " class="cover__overlay">
-        </a>
-        <div class="cover__conteiner">
-          <h3 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h3>
-          <h4 class="cover__subtitle">По мотивам учебной темы о Транссибе
+        <h3 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h3>
+        <h4 class="cover__subtitle">По мотивам учебной темы о Транссибе
              — путешествие от столицы до Байкала 
              на электричках.</h4>
-        </div>
+        </a>
       </section>
-    </div>
-<div class="footer " >
+  </main>
+<footer class="footer" >
+  <nav class="footer__conteiner">
       <ul class="footer__conteiner-nav">
-        <li class="footer__li"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-        <li class="footer__li"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-        <li class="footer__li"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-        <li class="footer__li"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-        <li class="footer__li"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+        <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+        <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+        <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+        <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+        <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
       </ul>
-    <p class="footer__copyright">© 2022. Izorgin Pasha</p>
-    </div>
+    <p class="footer__copyright">© <span class="number">2022</span>. Izorgin Pasha</p>
+  </nav>
+</footer>
   </div>
 </body>
 </html>
