--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="header__logo" ></div>
       <ul class="header__nav">
       <li class="header__list"><a class="header__lang-link header__lang-link_clikc" href="#">Ru</a></li>
-      <li class="header__list"><a class="header__lang-link" href="#">En</a></ul>
+      <li class="header__list"><a class="header__lang-link" href="#">En</a>
       </ul>
     </div>
   <main class="content ">
@@ -30,23 +30,22 @@
         <li class="intro__item"><p class="intro__list"> Объектов природного наследия ЮНЕСКО <span class="number">12</span></p></li>
         <li class="intro__item"><p class="intro__list"> Объектов культурного наследия ЮНЕСКО <span class="number">16</span></p></li>
         <li class="intro__item"><p class="intro__list"> Природных заповедников <span class="number">105</span></p></li>
-        <li class="intro__item"><p class="intro__list"> Аэропортов <span class="number">241</span></p></li>
-      </ul>
+        <li class="intro__item"><p class="intro__list"> Аэропортов <span class="number">241</span></p></ul>
       </section>
       <section class="photo">
         <ul class="photo-grid">
-        <li class="photo__list"><img src="images/__item.png" alt="Поезд" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item1.png" alt="Над горами" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item2.png" alt="Утрении туман" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item3.png" alt="Лес в сочи" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/item4.png" alt="Лед байкала" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item5.png" alt="Байкал" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item6.png" alt="Ельбрус" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item7.png" alt="Переход" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item8.png" alt="Мутновский вулкан" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item9.png" alt="Горы Камчатки" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item10.png" alt="Баикальскии берег" class="photo-grid__item"></li>
-        <li class="photo__list"><img src="images/__item11.png" alt="Ергаки" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item.png" alt="Поезд" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item1.png" alt="Над горами" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item2.png" alt="Утрении туман" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item3.png" alt="Лес в сочи" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/item4.png" alt="Лед байкала" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item5.png" alt="Байкал" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item6.png" alt="Ельбрус" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item7.png" alt="Переход" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item8.png" alt="Мутновский вулкан" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item9.png" alt="Горы Камчатки" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item10.png" alt="Баикальскии берег" class="photo-grid__item"></li>
+          <li class="photo__list"><img src="images/__item11.png" alt="Ергаки" class="photo-grid__item"></li>
       </ul>
       </section>
       <section class="places ">
