--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="header__logo" ></div>
       <ul class="header__nav">
       <li class="header__list"><a class="header__lang-link header__lang-link_clikc" href="#">Ru</a></li>
-      <li class="header__list"><a class="header__lang-link" href="#">En</a>
+      <li class="header__list"><a class="header__lang-link" href="#">En</a></li>
       </ul>
     </div>
   <main class="content ">
@@ -30,7 +30,7 @@
         <li class="intro__item"><p class="intro__list"> Объектов природного наследия ЮНЕСКО <span class="number">12</span></p></li>
         <li class="intro__item"><p class="intro__list"> Объектов культурного наследия ЮНЕСКО <span class="number">16</span></p></li>
         <li class="intro__item"><p class="intro__list"> Природных заповедников <span class="number">105</span></p></li>
-        <li class="intro__item"><p class="intro__list"> Аэропортов <span class="number">241</span></p></ul>
+        <li class="intro__item"><p class="intro__list"> Аэропортов <span class="number">241</span></p></li></ul>
       </section>
       <section class="photo">
         <ul class="photo-grid">
