--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
       <div class="header__logo" ></div>
       <ul class="header__nav">
-      <li class="header__list"><a class="header__lang-link header__lang-link_clikc" href="#">Ru</a></li>
+      <li class="header__list"><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
       <li class="header__list"><a class="header__lang-link" href="#">En</a></li>
       </ul>
     </div>
@@ -34,18 +34,18 @@
       </section>
       <section class="photo">
         <ul class="photo-grid">
-          <li class="photo__list"><img src="images/__item.png" alt="Поезд" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item1.png" alt="Над горами" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item2.png" alt="Утрении туман" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item3.png" alt="Лес в сочи" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/item4.png" alt="Лед байкала" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item5.png" alt="Байкал" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item6.png" alt="Ельбрус" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item7.png" alt="Переход" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item8.png" alt="Мутновский вулкан" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item9.png" alt="Горы Камчатки" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item10.png" alt="Баикальскии берег" class="photo-grid__item"></li>
-          <li class="photo__list"><img src="images/__item11.png" alt="Ергаки" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item.png" alt="Поезд" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item1.png" alt="Над горами" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item2.png" alt="Утрении туман" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item3.png" alt="Лес в сочи" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/item4.png" alt="Лед байкала" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item5.png" alt="Байкал" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item6.png" alt="Ельбрус" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item7.png" alt="Переход" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item8.png" alt="Мутновский вулкан" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item9.png" alt="Горы Камчатки" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item10.png" alt="Баикальскии берег" class="photo-grid__item"></li>
+          <li class="photo-grid__list"><img src="images/__item11.png" alt="Ергаки" class="photo-grid__item"></li>
       </ul>
       </section>
       <section class="places ">
@@ -138,14 +138,14 @@
   </main>
 <footer class="footer" >
   <nav class="footer__conteiner">
-      <ul class="footer__conteiner-nav">
+      <ul class="footer__items">
         <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
         <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
         <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
         <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
         <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
       </ul>
-    <p class="footer__copyright">© <span class="number">2022</span>. Izorgin Pasha</p>
+    <p class="footer__copyright">© 2022. Izorgin Pasha</p>
   </nav>
 </footer>
   </div>
