--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
       </section>
       <section class="photo">
         <ul class="photo-grid">
-          <li class="photo-grid__list"><img src="images/__item.png" alt="Поезд" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item1.png" alt="Над горами" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item2.png" alt="Утрении туман" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item3.png" alt="Лес в сочи" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/item4.png" alt="Лед байкала" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item5.png" alt="Байкал" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item6.png" alt="Ельбрус" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item7.png" alt="Переход" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item8.png" alt="Мутновский вулкан" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item9.png" alt="Горы Камчатки" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item10.png" alt="Баикальскии берег" class="photo-grid__item"></li>
-          <li class="photo-grid__list"><img src="images/__item11.png" alt="Ергаки" class="photo-grid__item"></li>
+          <li ><img src="images/__item.png" alt="Поезд" class="photo-grid__item"></li>
+          <li ><img src="images/__item1.png" alt="Над горами" class="photo-grid__item"></li>
+          <li ><img src="images/__item2.png" alt="Утрении туман" class="photo-grid__item"></li>
+          <li ><img src="images/__item3.png" alt="Лес в сочи" class="photo-grid__item"></li>
+          <li ><img src="images/item4.png" alt="Лед байкала" class="photo-grid__item"></li>
+          <li ><img src="images/__item5.png" alt="Байкал" class="photo-grid__item"></li>
+          <li ><img src="images/__item6.png" alt="Ельбрус" class="photo-grid__item"></li>
+          <li ><img src="images/__item7.png" alt="Переход" class="photo-grid__item"></li>
+          <li ><img src="images/__item8.png" alt="Мутновский вулкан" class="photo-grid__item"></li>
+          <li ><img src="images/__item9.png" alt="Горы Камчатки" class="photo-grid__item"></li>
+          <li ><img src="images/__item10.png" alt="Баикальскии берег" class="photo-grid__item"></li>
+          <li ><img src="images/__item11.png" alt="Ергаки" class="photo-grid__item"></li>
       </ul>
       </section>
       <section class="places ">
@@ -139,11 +139,11 @@
 <footer class="footer" >
   <nav class="footer__conteiner">
       <ul class="footer__items">
-        <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-        <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-        <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-        <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-        <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+        <li ><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+        <li ><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+        <li ><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+        <li ><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+        <li ><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
       </ul>
     <p class="footer__copyright">© 2022. Izorgin Pasha</p>
   </nav>
